@@ -1,6 +1,10 @@
 # ChangeLog for app-office/openoffice-bin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.219 2009/09/26 14:08:45 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.220 2009/09/26 20:49:10 suka Exp $
+
+  26 Sep 2009; Andreas Proschofsky <suka@gentoo.org>
+  -openoffice-bin-3.0.0.ebuild, -openoffice-bin-3.1.0.ebuild:
+  Remove vulnerable versions for security bug #283370
 
   26 Sep 2009; Tobias Heinlein <keytoaster@gentoo.org>
   openoffice-bin-3.1.1.ebuild:
